--- a/css/main.css
+++ b/css/main.css
@@ -485,7 +485,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 .about-services ul.services .service-item{padding-left:0;margin-bottom:3rem;}
 .about-services ul.services .service-item h4{margin-bottom:1.5rem;}
 }
-#skills{background-color:#1f0e01;background-image:url(https://res.cloudinary.com/mehmood/image/upload/s--Aa_LXNgu--/q_100/v1669758822/mkhalid/skills-bg.webp);background-repeat:no-repeat;background-position:center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;min-height:800px;position:relative;padding:12rem 0 9.6rem;color:rgba(255, 255, 255, 0.3);}
+#skills{background-color:#1f0e01;background-image:url(https://res.cloudinary.com/mehmood/image/upload/s--Aa_LXNgu--/q_100/v1669758822/mkhalid/skills-bg.webp);background-repeat:no-repeat;background-position:center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;min-height:800px;position:relative;padding:12rem 0 9.6rem;color:rgba(255, 255, 255, 0.7);}
 #skills .overlay{position:absolute;top:0;left:0;width:100%;height:100%;opacity:.7;background-color:#000000;}
 #skills .gradient-overlay{position:absolute;top:0;left:0;width:100%;height:100%;opacity:.2;background:-moz-linear-gradient(left, black 0%, black 20%, transparent 100%);background:-webkit-linear-gradient(left, black 0%, black 20%, transparent 100%);background:linear-gradient(to right, black 0%, black 20%, transparent 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#00000000', GradientType=1);}
 #skills .row{position:relative;}
@@ -585,7 +585,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 #contact .overlay{position:absolute;top:0;left:0;width:100%;height:100%;opacity:.7;background-color:#000000;}
 #contact .section-intro h1{color:white;}
 #contact .section-intro h3{color:#7c3b08;}
-#contact .section-intro p.lead{color:rgba(255, 255, 255, 0.3);}
+#contact .section-intro p.lead{color:rgba(255, 255, 255, 0.7);}
 .contact-form{max-width:740px;margin-top:4.2rem;position:relative;}
 .contact-form::-webkit-input-placeholder{color:rgba(255, 255, 255, 0.7);}
 .contact-form:-moz-placeholder{color:rgba(255, 255, 255, 0.7);}
@@ -625,7 +625,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 .oldie #submit-loader .s-loader{display:none;}
 .oldie #submit-loader .text-loader{display:block;}
 .contact-info{margin:4.8rem auto 0;font-family:"montserrat-regular", sans-serif;font-size:1.6rem;text-align:center;position:relative;}
-.contact-info p{color:#555;}
+.contact-info p{color: rgba(255, 255, 255, 0.7);}
 .contact-info .collapse{padding:0;}
 .contact-info .icon{margin-bottom:2.1rem;}
 .contact-info .icon i{font-size:4.2rem;color:#FFFFFF;}
