--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,47 @@
-@import url("font-awesome/css/font-awesome.min.css");@import url("windows10/windows10.css");@font-face{font-family:"montserrat-regular";src:url("../fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-regular-webfont.woff") format("woff");font-style:normal;font-weight:normal;}
-@font-face{font-family:"montserrat-bold";src:url("../fonts/montserrat/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-bold-webfont.woff") format("woff");font-style:normal;font-weight:normal;}
-@font-face{font-family:"librebaskerville-regular";src:url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff") format("woff");font-style:normal;font-weight:normal;}
-@font-face{font-family:"librebaskerville-italic";src:url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff") format("woff");font-style:normal;font-weight:normal;}
-@font-face{font-family:"librebaskerville-bold";src:url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff2") format("woff2"), url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff") format("woff");font-style:normal;font-weight:normal;}
+@font-face {
+    font-family: "montserrat-regular";
+    src: url("../fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"),
+            url("../fonts/montserrat/montserrat-regular-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "montserrat-bold";
+    src: url("../fonts/montserrat/montserrat-bold-webfont.woff2") format("woff2"),
+         url("../fonts/montserrat/montserrat-bold-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "librebaskerville-regular";
+    src: url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff2") format("woff2"),
+         url("../fonts/librebaskerville/librebaskerville-regular-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "librebaskerville-italic";
+    src: url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff2") format("woff2"),
+         url("../fonts/librebaskerville/librebaskerville-italic-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: "librebaskerville-bold";
+    src: url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff2") format("woff2"),
+         url("../fonts/librebaskerville/librebaskerville-bold-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+    font-display: swap;
+  }
 html{font-size:10px;}
 @media only screen and (max-width:1024px){html{font-size:9.375px;}
 }
@@ -307,17 +346,17 @@ input::-moz-focus-inner{border:0;padding:0;}
 .skill-bars li .percent95{width:95%;}
 .skill-bars li .percent100{width:100%;}
 .section-intro{text-align:center;position:relative;margin-bottom:1.5rem;}
-.section-intro h1{font-family:"librebaskerville-bold", serif;font-size:4.8rem;line-height:1.375;color:#151515;}
+.section-intro h1, .section-intro h2{font-family:"librebaskerville-bold", serif;font-size:4.8rem;line-height:1.375;color:#151515;}
 .section-intro h3{font-family:"montserrat-bold", sans-serif;font-size:2rem;color:#4C2405;text-transform:uppercase;letter-spacing:.15rem;margin-bottom:0;}
 .section-intro.with-bottom-sep{padding-bottom:4.2rem;position:relative;}
 .section-intro.with-bottom-sep::after{display:inline-block;height:1px;width:240px;background-color:#dedede;text-align:center;}
-@media only screen and (max-width:768px){.section-intro h1{font-size:4.2rem;}
+@media only screen and (max-width:768px){.section-intro h1, .section-intro h2{font-size:4.2rem;}
 .section-intro h3{font-size:1.8rem;}
 }
-@media only screen and (max-width:600px){.section-intro h1{font-size:3.6rem;}
+@media only screen and (max-width:600px){.section-intro h1, .section-intro h2{font-size:3.6rem;}
 .section-intro h3{font-size:1.7rem;}
 }
-@media only screen and (max-width:400px){.section-intro h1{font-size:3.3rem;}
+@media only screen and (max-width:400px){.section-intro h1, .section-intro h2{font-size:3.3rem;}
 .section-intro h3{font-size:1.6rem;}
 }
 .wide{max-width:1300px;}
@@ -330,7 +369,7 @@ input::-moz-focus-inner{border:0;padding:0;}
 header{width:100%;height:auto;position:absolute;left:0;top:0;z-index:700;}
 header .row{height:auto;max-width:1300px;position:relative;}
 header .header-logo{position:absolute;left:26px;top:30px;-moz-transition:all 1s ease-in-out;-o-transition:all 1s ease-in-out;-webkit-transition:all 1s ease-in-out;-ms-transition:all 1s ease-in-out;transition:all 1s ease-in-out;}
-header .header-logo a{display:block;margin:0;padding:0;outline:0;border:none;width:60px;height:60px;background:url("https://res.cloudinary.com/mehmood/image/upload/s--g0WOhk0W--/c_scale,h_60,q_100,w_60/v1504917477/mk_olxc9y.png") no-repeat center;background-color:white;font:0/0 a;text-shadow:none;color:transparent;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;-webkit-transition:all 0.5s ease-in-out;-ms-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out;}
+header .header-logo a{display:block;margin:0;padding:0;outline:0;border:none;width:60px;height:60px;font:0/0 a;text-shadow:none;color:transparent;-moz-transition:all 0.5s ease-in-out;-o-transition:all 0.5s ease-in-out;-webkit-transition:all 0.5s ease-in-out;-ms-transition:all 0.5s ease-in-out;transition:all 0.5s ease-in-out;}
 #header-menu-trigger{display:block;position:fixed;right:26px;top:30px;height:42px;width:42px;line-height:42px;font-family:"montserrat-regular", sans-serif;font-size:1.4rem;text-transform:uppercase;letter-spacing:.2rem;color:rgba(255, 255, 255, 0.5);-moz-transition:all 0.3s ease-in-out;-o-transition:all 0.3s ease-in-out;-webkit-transition:all 0.3s ease-in-out;-ms-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;}
 #header-menu-trigger.opaque{background-color:#000000;}
 #header-menu-trigger.opaque .header-menu-text{background-color:#000000;}
@@ -379,7 +418,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 .home-content-tablecell{display:table-cell;vertical-align:bottom;z-index:500;}
 .home-content-tablecell .row{position:relative;padding-top:4.2rem;padding-bottom:15rem;}
 .home-content-tablecell h3{font-family:"montserrat-bold", sans-serif;font-size:2.2rem;color:rgba(255, 255, 255, 0.35);text-transform:uppercase;letter-spacing:.15rem;margin:0 0 0 .3rem;}
-.home-content-tablecell h1{font-family:"librebaskerville-bold", serif;font-size:5.2rem;line-height:1.5;color:#FFFFFF;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-family:"librebaskerville-bold", serif;font-size:5.2rem;line-height:1.5;color:#FFFFFF;}
 .home-content-tablecell .home-section-links{display:inline-block;list-style:none;margin:4.8rem 0 0 0;}
 .home-content-tablecell .home-section-links li{display:inline-block;font-family:"montserrat-bold", sans-serif;font-size:1.4rem;text-transform:uppercase;letter-spacing:.1rem;color:rgba(255, 255, 255, 0.35);margin-right:1.5rem;margin-bottom:.6rem;}
 .home-content-tablecell .home-section-links li:last-child{margin-right:0;}
@@ -400,15 +439,15 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 40%{-webkit-transform:translateY(20px);}
 }
 @media only screen and (max-width:1200px){.home-content-tablecell h3{font-size:2.1rem;}
-.home-content-tablecell h1{font-size:5rem;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-size:5rem;}
 }
 @media only screen and (max-width:1024px){.home-content-tablecell h3{font-size:2rem;}
-.home-content-tablecell h1{font-size:4.8rem;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-size:4.8rem;}
 }
 @media only screen and (max-width:768px){.home-content-tablecell .row{padding-bottom:11.4rem;}
 .home-content-tablecell .home-bottom-text{padding-right:15%;}
 .home-content-tablecell h3{font-size:1.8rem;}
-.home-content-tablecell h1{font-size:4rem;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-size:4rem;}
 .home-content-tablecell h1 br{display:none;}
 .home-content-tablecell .home-section-links{margin:4.2rem 0 0 0;}
 .home-content-tablecell .home-section-links li{font-size:1.3rem;}
@@ -420,22 +459,22 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 .home-content-tablecell .row{padding-top:9rem;padding-bottom:3rem;}
 .home-content-tablecell .home-bottom-text{padding-right:10%;}
 .home-content-tablecell h3{font-size:1.7rem;}
-.home-content-tablecell h1{font-size:3.8rem;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-size:3.8rem;}
 .scroll-icon{right:10px;}
 }
 @media only screen and (max-width:500px){.home-content-tablecell .home-bottom-text{padding-right:5%;}
 .home-content-tablecell h3{font-size:1.5rem;}
-.home-content-tablecell h1{font-size:3.4rem;}
+.home-content-tablecell h1,.home-content-tablecell h2{font-size:3.4rem;}
 }
 @media only screen and (max-width:400px){#home{min-height:654px;}
 .home-content-tablecell .home-bottom-text{padding-right:0;}
 .home-content-tablecell h3{font-size:1.4rem;}
-.home-content-tablecell h1{font-size:3.2rem;}
+.home-content-tablecell h1, .home-content-tablecell h2{font-size:3.2rem;}
 .home-content-tablecell .home-section-links{margin:1.5rem 0 0 0;}
 }
 #about{position:relative;padding:10.8rem 0 10.8rem;background-color:#FFFFFF;min-height:700px;}
 #about h3{font-family:"montserrat-bold", sans-serif;font-size:1.6rem;color:#4C2405;text-transform:uppercase;letter-spacing:.15rem;margin:0 0 0 .3rem;}
-#about h1{font-family:"librebaskerville-bold", serif;font-size:3.3rem;line-height:1.455;}
+#about .intro h1, #about .intro h2 {font-family:"librebaskerville-bold", serif;font-size:3.3rem;line-height:1.455;color:#151515;}
 .about-profile-bg{position:absolute;top:0;left:0;width:100%;height:100%;background:#EBEBEB;width:50%;background-image:url(../images/bg4.jpg);background-repeat:no-repeat;background-position:center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;opacity:.35;}
 .about-wrap{width:94%;max-width:1300px;margin:0 auto;}
 .about-wrap:before,
@@ -492,7 +531,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 #skills [class="col-skills"]{width:50%;padding-right:0;}
 #skills .section-intro{text-align:left;}
 #skills .section-intro h3{color:rgba(255, 255, 255, 0.35);color:#7c3b08;}
-#skills .section-intro h1{color:#FFFFFF;}
+#skills .section-intro h1,#skills .section-intro h2{color:#FFFFFF;}
 #skills .skill-bars{margin-top:8.4rem;}
 #skills .skill-bars li{background:#7c3b08;margin-bottom:7.2rem;}
 #skills .skill-bars li strong{color:#FFFFFF;}
@@ -583,7 +622,7 @@ header .header-logo a{width:54px;height:54px;background-size:54px 54px;}
 }
 #contact{background-color:#111111;background-image:url(https://res.cloudinary.com/mehmood/image/upload/s--4VEu9pDz--/q_100/v1669758851/mkhalid/bg4.webp);background-repeat:no-repeat;background-position:center;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;padding-top:10.2rem;padding-bottom:6rem;position:relative;}
 #contact .overlay{position:absolute;top:0;left:0;width:100%;height:100%;opacity:.7;background-color:#000000;}
-#contact .section-intro h1{color:white;}
+#contact .section-intro h1, #contact .section-intro h2{color:white;}
 #contact .section-intro h3{color:#7c3b08;}
 #contact .section-intro p.lead{color:rgba(255, 255, 255, 0.7);}
 .contact-form{max-width:740px;margin-top:4.2rem;position:relative;}
